--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,9 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^7.14.4",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
